ENG-1075: fix minor prexisting issues raise by the PR on touched file